--- a/docker/todo-app/back-end/Dockerfile
+++ b/docker/todo-app/back-end/Dockerfile
@@ -1,6 +1,9 @@
-FROM node:14
-WORKDIR /home/rafael/Documents/sd-024-a-project-docker-todo-list/docker/todo-app/back-end
-EXPOSE 3000
-COPY src /home/rafael/Documents/sd-024-a-project-docker-todo-list/docker/todo-app/back-end
-COPY node_modules.tar.gz /home/rafael/Documents/sd-024-a-project-docker-todo-list/docker/todo-app/back-end
+FROM node:14-alpine
+WORKDIR /my-docker-apps
+EXPOSE 3001
+COPY package-lock.json .
+COPY package.json .
+RUN npm install
+ADD node_modules.tar.gz .
+COPY . .
 ENTRYPOINT [ "npm", "start" ]
