--- a/docker/todo-app/back-end/Dockerfile
+++ b/docker/todo-app/back-end/Dockerfile
@@ -1,9 +1,9 @@
 FROM node:14-alpine
 WORKDIR /my-docker-apps
 EXPOSE 3001
-COPY package-lock.json .
-COPY package.json .
-RUN npm install
+# COPY package-lock.json .
+# COPY package.json .
 ADD node_modules.tar.gz .
 COPY . .
+RUN npm install
 ENTRYPOINT [ "npm", "start" ]
