--- a/docker/todo-app/tests/Dockerfile
+++ b/docker/todo-app/tests/Dockerfile
@@ -1,8 +1,8 @@
 FROM mjgargani/puppeteer:trybe1.0
 WORKDIR /my-docker-apps
-COPY package-lock.json .
-COPY package.json .
-RUN npm install
-COPY node_modules.tar.gz .
+# COPY package-lock.json .
+# COPY package.json .
+ADD node_modules.tar.gz .
 COPY . .
+RUN npm install
 ENTRYPOINT [ "npm", "test" ]
