--- a/docker/todo-app/front-end/Dockerfile
+++ b/docker/todo-app/front-end/Dockerfile
@@ -1,9 +1,9 @@
 FROM node:14-alpine
 WORKDIR /my-docker-apps
 EXPOSE 3000
-COPY package-lock.json .
-COPY package.json .
-RUN npm install
 ADD node_modules.tar.gz .
 COPY . .
+# COPY package-lock.json .
+# COPY package.json .
+RUN npm install
 ENTRYPOINT [ "npm", "start" ]
